package cn.tunyl.stuctural.proxy;

public interface SellTickets {
    void sell();
}
